Сделан пункт 3.5 нужно продолжить дальше

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width. initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width initial-scale=1.0" />
     <title>Что-то на науку недели</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
@@ -11,10 +11,11 @@
     <!-- Шапка сайта -->
     <header class="header" id="header">
       <div class="container-header">
-        <img src="./img/logo.svg" alt="logo" class="header_logo" />
+        <img src="./img/logo.svg" alt="logo" class="header_logo" width="200px" height="200px" />
         <p class="header_title">
           Расчёт электропитяющей установки поста ЭЦ крупной станции
         </p>
+        <div class="header_block"></div>
       </div>
     </header>
 
@@ -72,12 +73,6 @@
                     value="Электростанция узловая (станционная)"
                   >
                     Электростанция узловая (станционная)
-                  </option>
-                  <option
-                    class="vneshnee-eletrosnabzhenie__vid-istochnika__option text"
-                    value="Дизель-генраторная электростанция"
-                  >
-                    Дизель-генраторная электростанция
                   </option>
                   <option
                     class="vneshnee-eletrosnabzhenie__vid-istochnika__option text"
@@ -151,12 +146,6 @@
                     value="Электростанция узловая (станционная)"
                   >
                     Электростанция узловая (станционная)
-                  </option>
-                  <option
-                    class="vneshnee-eletrosnabzhenie__vid-istochnika__option text"
-                    value="Дизель-генраторная электростанция"
-                  >
-                    Дизель-генраторная электростанция
                   </option>
                   <option
                     class="vneshnee-eletrosnabzhenie__vid-istochnika__option text"
